fix: the visibility of the all section, outside the focused image is clickable the close

--- a/editor-components/Image_gallery/image_gallery_2/image-gallery2.module.scss
+++ b/editor-components/Image_gallery/image_gallery_2/image-gallery2.module.scss
@@ -60,6 +60,9 @@
             aspect-ratio: 4 / 3;
             position: relative;
             overflow: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
 
             .gallery-image {
               width: 100%;
@@ -86,11 +89,11 @@
               border-radius: 50%;
               padding: 10px;
               position: absolute;
-              top: 50%;
+              top: 60%;
               left: 50%;
               transform: translate(-50%, -50%) scale(2);
               opacity: 0;
-              transition: opacity 0.5s ease;
+              transition: opacity 0.6s ease-in-out, top 0.6s ease-in-out;
               z-index: 1;
             }
           }
@@ -98,10 +101,12 @@
           &:hover {
             .gallery-image {
               transform: scale(1.1);
+              transition: transform 1s ease-in-out;
             }
 
             .magnifier-icon {
               opacity: 1;
+              top: 50%;
             }
           }
         }
@@ -118,6 +123,9 @@
       aspect-ratio: 4 / 3;
       position: relative;
       overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
 
       .modal-image {
         width: 100%;
@@ -206,9 +214,10 @@
 
 @media only screen and (max-width: 1000px) {
   .surface {
-    .content .gallery-grid {
-      grid-template-columns: repeat(2, 1fr);
-      transition: transform 1s ease;
+    .max-content {
+      .content .gallery-grid {
+        grid-template-columns: repeat(2, 1fr);
+      }
     }
   }
 }
@@ -216,6 +225,7 @@
 @media only screen and (max-width: 500px) {
   .surface {
     padding: 20px 20px;
+
     .gallery-grid {
       grid-template-columns: 1fr !important;
     }
@@ -236,7 +246,7 @@
       padding: 5px !important;
     }
 
-    .image-container .modal-image {
+    .max-content .image-container .modal-image {
       min-width: 325px;
       min-height: 0;
     }
